[gd_scene load_steps=3 format=3 uid="uid://2nl7pr4xb83x"]

[ext_resource type="Script" path="res://scripts/Options.gd" id="1_g3k27"]
[ext_resource type="Texture2D" uid="uid://crhbbhtfqh0q5" path="res://assets/backgrounds/main_menu.png" id="2_6tup6"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_g3k27")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 54.0
offset_right = 313.0
offset_bottom = 238.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Vol_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Resol_label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Resolutions"

[node name="Resolution" type="OptionButton" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
item_count = 3
selected = 1
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
button_pressed = true
text = "Fullscreen"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="OptionsPocho" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(160, 90)
texture = ExtResource("2_6tup6")

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 143.0
offset_right = 51.0
offset_bottom = 174.0
text = "Quit"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
